--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Hello word</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam repellendus tempore optio. Tenetur neque, porro et odit quo aspernatur, ad, excepturi saepe temporibus inventore nostrum nesciunt. Exercitationem doloribus amet iusto?</p>
 </body>
 </html>
